Update package name

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="file:///usr/lib/libvasak-ui/css/style.min.css" />
   <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
 
-  <title>Application Template</title>
+  <title>Occasum</title>
 </head>
 
 <body>
